--- a/paginas/index.html
+++ b/paginas/index.html
@@ -37,7 +37,7 @@
     </ul>
     <div>
     <u><h4>juegos mas descargados</h4></u>
-    &nbsp;&nbsp;&nbsp;<a href="shotter.html"><img src="fotos/" height="300"></a> &nbsp;
+    &nbsp;&nbsp;&nbsp;<a href="shotter.html"><img src="fotos/battlefield 3.jpg" height="300"></a> &nbsp;
     <a href="accion.html"><img src="fotos/dishonored.jpg" height="300"></a> &nbsp;
     <a href="Multi.html"><img src="fotos/the division.jpg" height="300"></a> &nbsp; 
     <a href="accion.html"><img src="fotos/madmaxpc.jpg" height="300"></a> &nbsp; 
